# Voice_platform

./: .gitignore  pyproject.toml
backend/: .env.example  duolife_products_data.py  main.py  voice_agent.db
backend/chromadb_data/: chroma.sqlite3
backend/models/: __init__.py  database.py
backend/routes/: __init__.py  agents.py  data_processing.py  health.py  onboarding.py  voice_control.py
backend/schemas/: __init__.py  onboarding.py  simple_complete.py
backend/services/: agent_tools.py  chromadb_service.py  content_processor.py  data_processing_coordinator.py  database_service.py  openai_service.py  pdf_service.py  tavily_service.py
backend/voice_agents/: __init__.py  agent.py  agent_builder.py  agent_new.py  agent_old.py  agent_simple.py  prompts.py  session_manager.py  tools.py  tools_livekit.py  voice_agent.py
backend/voice_agents/integrations/: calendar_integration.py
data/: DUOLIFE Ingredients.xlsx
docs/: exec.md  plan.md  progress.md
frontend/: dashboard.html  index.html  livekit-test.html  livekit-wrapper.js  package-lock.json  package.json  voice-test.html
frontend/src/: main.js
frontend/src/styles/: main.css
tests/: check_knowledge.py  test_async_pipeline.py  test_complete_pipeline.py  test_data_processing.py  test_livekit_agent.py  test_onboarding_flow.py
voice_agents/: agent.py  agent_builder.py  prompts.py  tools.py  voice_manager.py
voice_agents/integrations/: __init__.py  crm_integration.py  gmail_integration.py
